<resources>
    <string name="app_name">Booking Baboon</string>
    <string name="splash">Booking Baboon</string>
    <string name="login">Log In</string>
    <string name="username">Enter your username:</string>
    <string name="password">Enter your password:</string>
    <string name="loginButton">Log In</string>
    <string name="registerButton">Register</string>
    <string name="home">Home</string>
    <string name="emailHint">Enter your email:</string>
    <string name="phoneHint">Enter your phone:</string>
    <string name="passHint">Enter your password:</string>
    <string name="register">Register</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filters">filter</string>
    <string name="sort">sort\n</string>
    <string name="category">Category</string>
    <string name="addressHint">Enter your address:</string>
    <string name="confirmPassHint">Confirm your password:</string>
    <string name="nameHint">Enter your first name:</string>
    <string name="lastNameHint">Enter your last name:</string>
    <string name="accommodation_image">Accommodation image</string>
    <string name="accommodation_title">accommodation title</string>
    <string name="accommodation_description">accommodation_description</string>
    <string name="accommodation_rating">4.5</string>
    <string name="favoriteButton">favoriteButton</string>
    <string name="show_accommodation_button">Show more</string>
    <string name="accommodation_total_price">1000e</string>
    <string name="accommodation_price_per_night">100e/night</string>
    <string name="accommodation_location">Switzerland</string>
    <string name="category_example_1">Hotel</string>
    <string name="category_example_2">Campsite</string>
    <string name="category_example_3">Apartment</string>
    <string name="Amenities">Amenities</string>
    <string name="amenities_example_1">Free wifi</string>
    <string name="amenities_example_2">Air conditioning</string>
    <string name="amenities_example_3">Swimming pool</string>
    <string name="amenities_example_4">Free parking</string>
    <string name="textPhone">Phone number</string>
    <string name="textAddress">Address</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">E-mail</string>
    <string name="logout">Logout</string>
    <string name="saveChanges">Save Changes</string>
    <string name="account">Account</string>
    <string name="passwordTitle">Password</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="discardChanges">Discard Changes</string>
    <string name="priceFrom">from</string>
    <string name="priceTo">to</string>
    <string name="cityInput">ex. Belgrade</string>
    <string name="guestNumInput">ex. 2</string>
    <string name="searchTitle">Search form</string>
    <string name="hostSwitch">Host </string>
    <string name="auto_accept">Auto accept reservation</string>
    <string name="generateReportButton">Generate report</string>
    <string name="edit_accommodation_button">Edit\n</string>
    <string name="add_availability_button">Add availability\n</string>
    <string name="delete_button">Delete\n</string>
    <string name="add_accommodation_button">Add Accommodation</string>
    <string name="Deny">deny</string>
    <string name="Approve">approve</string>
    <string name="status">Status:</string>
    <string name="requestType">Request type:</string>
    <string name="show_all_requests">Show all requests</string>
    <string name="create_accommodation">New Accommodation</string>
    <string name="accommodation_name_hint">Name</string>
    <string name="accommodation_address_hint">Address</string>
    <string name="accommodation_city_hint">City</string>
    <string name="accommodation_country_hint">Country</string>
    <string name="accommodation_description_hint">Description</string>
    <string name="accommodation_type">Type</string>
    <string name="accommodation_min_guest_hint">Minimum Number Of Guests</string>
    <string name="accommodation_max_guest_hint">Maximum Number Of Guests</string>
    <string name="create_accommodation_button">Create Accommodation</string>
    <string name="pricePerPerson">Price Per Person</string>
    <string name="upload_image">Upload Image</string>
    <string name="add_availability_price_hint">Price</string>
    <string name="add_available_periods">Add availability</string>
    <string name="edit_accommodation">Edit accommodation</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="reservation_host">reservation host</string>
    <string name="reservation_status">status</string>
    <string name="reservation_accommodation_name">Accommodation</string>
    <string name="reservation_period">2024.01.25 - 2024.02.05</string>
    <string name="cancelButton">Cancel</string>
    <string name="reviewHost">review host</string>
    <string name="reportHost">report host</string>
    <string name="reviewAccommodation">review accommodation\n</string>
    <string name="review_host">Review Host</string>
    <string name="submit_review">Submit Review</string>
    <string name="comment_hint">Comment</string>
    <string name="rating">Rating</string>
    <string name="review_accommodation">Review Accommodation</string>
    <string name="submit_report">Submit Report</string>
    <string name="message_hint">Message</string>
    <string name="report_host">Report Host</string>
    <string name="reportGuest">report guest</string>
    <string name="approve">approve</string>
    <string name="deny">deny</string>
    <string name="reservation_guest">reservation_guest</string>
    <string name="guestCancellations">5 cancellations</string>
    <string name="report_accommodation">Report Accommodation</string>
    <string name="report_review">Report Review</string>
    <string name="report_guest">Report Guest</string>
    <string name="dateExample">Jan 4, 2024, 6:05:53 PM</string>
    <string name="host_reviews">Host Reviews</string>
    <string name="favorites_icon_description">favorites icon</string>
    <string name="Summary">Summary\n</string>
    <string name="Period">2023.01.25 - 2024.01.25</string>
    <string name="donwloadPDF">Download PDF</string>
    <string name="markAsRead">Mark as read</string>
    <string name="received">"Received: "</string>
    <string name="titleExample">Title</string>
    <string name="reservationCancelledNotification">Reservation cancelled</string>
    <string name="reservationCreatedNotification">Reservation created</string>
    <string name="hostReviewNotification">Host reviews</string>
    <string name="accommodationReviewNotification">Accommodation reviews</string>
    <string name="reservationResponseNotification">Reservation response</string>
    <string name="notificationsTitle">Notifications</string>
    <string name="notificationsDescription">Choose which notifications you would like to recieve</string>
    <string name="emailExample">example@example.com</string>
    <string name="reported_by">Reported by:</string>
    <string name="reviewed_by">Reviewed by:</string>
    <string name="date_example">Jan 4, 2024, 6:05:53 PM</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="userStatus">User status:</string>

</resources>