<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft = "15dp"
        android:layout_marginRight = "15dp"
        tools:context=".ui.elements.Fragments.AccountScreen">


        <!-- TODO: Update blank fragment layout -->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/compassImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/compass"
                android:contentDescription="Compass Image"/>


        </FrameLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.065"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/accountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="23sp"
                android:text="@string/account" />
        </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastName"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textPhone"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPhonetic"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textAddress"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.065"
            android:orientation="vertical">

            <TextView
                android:id="@+id/passwordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"

                android:textSize="23sp"
                android:text="@string/passwordTitle" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currentPassword"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPassword"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPassword"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/notificationsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"

            android:textSize="23sp"
            android:text="@string/notificationsTitle" />

        <TextView
            android:id="@+id/notificationsDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="normal"

            android:textSize="16sp"
            android:text="@string/notificationsDescription" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id = "@+id/accept_reservation_created_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme = "@style/SwitchMaterial"
            android:text="@string/reservationCreatedNotification"
            android:textColor="@color/black"
            android:textSize="14dp"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id = "@+id/accept_reservation_cancelled_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme = "@style/SwitchMaterial"
            android:text="@string/reservationCancelledNotification"
            android:textColor="@color/black"
            android:textSize="14dp"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id = "@+id/accept_host_review_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme = "@style/SwitchMaterial"
            android:text="@string/hostReviewNotification"
            android:textColor="@color/black"
            android:textSize="14dp"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id = "@+id/accept_accommodation_review_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme = "@style/SwitchMaterial"
            android:text="@string/accommodationReviewNotification"
            android:textColor="@color/black"
            android:textSize="14dp"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id = "@+id/accept_reservation_response_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme = "@style/SwitchMaterial"
            android:text="@string/reservationResponseNotification"
            android:textColor="@color/black"
            android:textSize="14dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.95"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveChangesButton"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/saveChanges"
                    android:theme="@style/Button.CurvedEdges" />

                <Button
                    android:id="@+id/discardChangesButton"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:text="@string/discardChanges"
                    android:theme="@style/Button.CurvedEdges" />
            </LinearLayout>

            <Button
                android:id="@+id/logoutButton"
                android:theme="@style/Button.CurvedEdges"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:text="@string/logout" />

            <Button
                android:id="@+id/deleteAccountButton"
                android:layout_width="match_parent"
                android:theme="@style/Button.RedCurved"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:text="@string/deleteAccount" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>