<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.elements.Activities.RegisterScreen"
    android:layout_margin="16dp"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="36sp"
        android:textStyle="italic"
        android:layout_weight="0"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameHint"
        android:layout_marginBottom="14dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastNameHint"
        android:layout_marginBottom="14dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailHint"
        android:layout_marginBottom="14dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phoneHint"
        android:layout_marginBottom="14dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addressHint"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passHint"
        android:layout_marginBottom="14dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPassHint"
        android:layout_marginBottom="14dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id = "@+id/hostSwitchRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme = "@style/SwitchMaterial"
        android:text="@string/hostSwitch"
        android:textColor="@color/black"
        android:textSize="16dp"
        />



    <Button
        android:id="@+id/registerConfirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerButton"
        />

    </LinearLayout>
    </ScrollView>
</LinearLayout>