<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/guest_reservation_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/border_background"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/guest_reservation_accommodation_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:gravity="left|center_vertical"
                android:text="@string/reservation_accommodation_name"
                android:textAlignment="gravity"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guest_reservation_status"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="right|center_vertical"
                android:text="@string/reservation_status"
                android:layout_weight="1"
                android:textAlignment="gravity"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/guest_reservation_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/reservation_host"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/guest_reservation_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/reservation_period"
            android:textSize="14sp"
            android:textStyle="normal" />




    </LinearLayout>

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/guest_reservation_review_accommodation_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/reviewAccommodation"
            android:layout_weight="2.5"
            android:theme="@style/Button.CurvedEdges"
            android:layout_marginRight="5dp"
            />

        <Button
            android:id="@+id/generate_report_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/cancelButton"
            android:layout_weight="1"
            android:theme="@style/Button.RedCurved" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/guest_reservation_review_host_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/reviewHost"
            android:layout_weight="1"
            android:theme="@style/Button.CurvedEdges"
            android:layout_marginRight="5dp"
            />

        <Button
            android:id="@+id/guest_reservation_report_host_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/reportHost"
            android:layout_weight="1"
            android:theme="@style/Button.RedCurved"
            />
    </LinearLayout>

</LinearLayout>